Add note to site to site guide pointing to the customer's customer guide (#1996)
https://linear.app/ngrok/issue/DOC-437/add-note-to-site-to-site-guides-pointing-to-the-customers-customer

--- a/guides/site-to-site-connectivity/index.mdx
+++ b/guides/site-to-site-connectivity/index.mdx
@@ -9,6 +9,10 @@ ngrok is a universal gateway, which means it allows you to connect to any app, I
 
 This guide will walk you through an example scenario using ngrok to set up secure, remote access to APIs and DBs running in your customer's on prem, private network. The solution will enable you to grant trusted parties access to critical systems without exposing those systems to the public internet or relying on complex VPN setups.
 
+<Note>
+When you need to explain this setup to customers who install and run the ngrok agent in their network, you can share our [end-customer guide](/guides/site-to-site-connectivity/end-customers) which covers why ngrok is used, how it works, and why it's secure.
+</Note>
+
 ## Example scenario
 
 Consider a situation where your company (Acme Corp.) needs direct access to resources running in your customer's private network. This network is a clinic that runs a third party API and a DB containing sensitive patient information. In this scenario, this clinic blocks inbound connections. However, your SaaS applications need to reach that API to make requests and fetch data from that DB for mission critical operations. Specifically, the patient DB needs to be e2e TLS encrypted, with mTLS terminating in the customer's network.
@@ -130,6 +134,7 @@ Now that you have this Traffic Policy action in place, you have IP restrictions 
 
 ## What's next
 
+- [Share the end-customer guide](/guides/site-to-site-connectivity/end-customers) with customers who need to understand why ngrok is in their network.
 - [Set up a custom connect URL](/guides/site-to-site-connectivity/custom-connect-url) to white-label the agent connection for your customers.
 - [Install ngrok as a background service](/guides/site-to-site-connectivity/background-service) to ensure the agent starts on boot and recovers from failures.
 - [Eliminate single points of failure with redundant agents](/guides/site-to-site-connectivity/redundant-agents) to achieve high availability.
