Update details about traffic retention on free vs hobbyist and paygo plans (#1997)
https://linear.app/ngrok/issue/DOC-510/update-documentation-for-24-hour-retention-in-v3

--- a/ai-gateway/observability/traffic-inspector.mdx
+++ b/ai-gateway/observability/traffic-inspector.mdx
@@ -76,10 +76,9 @@ Traffic Inspector data is retained based on your ngrok plan:
 
 | Plan | Retention |
 |------|-----------|
-| Free | 3 days |
-| Personal | 7 days |
-| Pro | 30 days |
-| Enterprise | 90 days |
+| Free | 24 hours |
+| Hobbyist | 72 hours |
+| Pay-as-you-go | 72 hours (purchase add-on for longer retention) |
 
 ### Filtering traffic
 
