--- a/obs/traffic-inspection.mdx
+++ b/obs/traffic-inspection.mdx
@@ -22,7 +22,10 @@ The ngrok Traffic Inspector replaces the local agent inspection interface and ad
 By enabling full capture mode in your ngrok settings, you are able to replay requests to your upstream directly from the browser, instead of the original source.
 This can dramatically speed up development of webhooks or callbacks that are difficult to trigger repeatedly.
 
-Everyone gets three days of traffic retention, after which the traffic events are purged from the system. If you would like a longer look back window, you can purchase up to [90 days of retention with production plans](https://ngrok.com/pricing).
+Free accounts get 24 hours of traffic retention.
+Hobbyist and Pay-as-you-go get 72 hours. 
+After the retention period, traffic events are purged from the system. 
+Pay-as-you-go customers can [purchase an add-on](https://ngrok.com/pricing) for longer retention (up to 90 days).
 
 ## Full capture mode
 
@@ -38,7 +41,7 @@ Storing the full request and response data may mean you and your team members ha
 Once full capture mode is enabled, ngrok will begin capturing and storing the full requests and responses up to a maximum of 10KB, after which the data will be truncated. Header values will be truncated after 1KB for each value.
 Data that is truncated will be indicated in the Traffic Inspector through the number of bytes that were captured as well as the number of headers.
 
-This data is stored for your retention period of your account, currently set at 3 days from the time a request is received.
+This data is stored for your account’s retention period (24 hours for Free, 72 hours for Hobbyist and Pay-as-you-go) from the time a request is received.
 
 ## Replay
 
